# html-minify-cli

./: Cargo.toml  README.md
assets/: index.html  index.min.html
src/: main.rs
